Don't linkify headers for now

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <script src="http://assets.wurstmineberg.de/js/common.js"></script>
         <script type="text/javascript">
             // run by default
-            linkify_headers();
+            //linkify_headers();
             //configure_navigation();
             set_anchor_height();
             $(".use-tooltip").tooltip();
