--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Wurstmineberg</title>
+        <title>Wurstmineberg: All The Items</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Searchable Minecraft blocks and items database" />
         <meta name="author" content="Wurstmineberg" />
