Note image source in title text

--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
         </nav>
         <div class="container" style="text-align: center;">
             <h2>Error 404: Not Found</h2>
-            <p><img src="alltheitems2.png" alt="Craft ALL the items?" /></p>
+            <p><img src="alltheitems2.png" alt="Craft ALL the items?" title="original image by Allie Brosh of Hyperbole and a Half" /></p>
         </div>
         <hr />
         <p class="muted text-center">The People of wurstmineberg.de 2012–2014</p>
