Add error handling for all errors

--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>500</title>
+        <title>Wurstmineberg: All The Items</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Searchable Minecraft blocks and items database" />
         <meta name="author" content="Wurstmineberg" />
@@ -31,8 +31,8 @@
             -->
         </nav>
         <div class="container" style="text-align: center;">
-            <h2>Error 500: Internal Server Error</h2>
-            <p><img src="/alltheitems2.png" alt="Craft ALL the items?" title="original image by Allie Brosh of Hyperbole and a Half" /></p>
+            <h2>Coming <a href="http://wiki.wurstmineberg.de/Soon™">soon™</a></h2>
+            <p><img src="/assets/alltheitems.png" alt="Craft ALL the items!" title="original image by Allie Brosh of Hyperbole and a Half" /></p>
         </div>
         <hr />
         <p class="muted text-center">The People of wurstmineberg.de 2012–2014</p>
