--- a/static/index.html
+++ b/static/index.html
@@ -20,15 +20,37 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">All The Items</a>
+                <a class="navbar-brand" href="http://wurstmineberg.de/">Wurstmineberg</a>
             </div>
-            <!-- insert search bar here
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul id="navbar-list" class="nav navbar-nav">
+                    <li><a href="http://wurstmineberg.de/"><i class="fa fa-home"></i> Home</a></li>
+                    <li><a href="http://wurstmineberg.de/about"><i class="fa fa-info-circle"></i> About</a></li>
+                    <li><a href="http://wurstmineberg.de/people"><i class="fa fa-users"></i> People</a></li>
+                    <li><a href="http://wurstmineberg.de/stats"><i class="fa fa-table"></i> Statistics</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="fa fa-book"></i> Wiki<b class="caret"></b></a>
+                        <ul class="dropdown-menu p-navigation" id="p-navigation">
+                            <li id="n-mainpage-description"><a href="http://wiki.wurstmineberg.de/" title="Visit the main page [ctrl-alt-z]" accesskey="z">Main page</a></li>
+                            <li id="n-currentevents"><a href="http://wiki.wurstmineberg.de/Wurstmineberg_Wiki:Current_events" title="Find background information on current events">Current events</a></li>
+                            <li id="n-recentchanges"><a href="http://wiki.wurstmineberg.de/Special:RecentChanges" title="A list of recent changes in the wiki [ctrl-alt-r]" accesskey="r">Recent changes</a></li>
+                            <li id="n-randompage"><a href="http://wiki.wurstmineberg.de/Special:Random" title="Load a random page [ctrl-alt-x]" accesskey="x">Random page</a></li>
+                            <li id="n-help"><a href="https://www.mediawiki.org/wiki/Special:MyLanguage/Help:Contents" title="The place to find out">Help</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown active">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><i class="fa fa-ellipsis-h"></i> More<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/">All The Items</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <!-- insert search bar here
                     <div class="navbar-right funding-progress-container">
                         <p class="navbar-text">Search:</p>
                     </div>
-                </div>
-            -->
+                -->
+            </div>
         </nav>
         <div class="container" style="text-align: center;">
             <h2>Coming <a href="http://wiki.wurstmineberg.de/Soon™">soon™</a></h2>
