Update js function names

--- a/static/index.html
+++ b/static/index.html
@@ -65,9 +65,9 @@
         <script src="//assets.wurstmineberg.de/js/common.js"></script>
         <script type="text/javascript">
             // run by default
-            //linkify_headers();
-            //configure_navigation();
-            set_anchor_height();
+            //linkifyHeaders();
+            //configureNavigation();
+            setAnchorHeight();
             $(".use-tooltip").tooltip();
             $("abbr").tooltip();
         </script>
