--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,7 @@
         </nav>
         <div class="container" style="text-align: center;">
             <h2>Coming <a href="//wiki.wurstmineberg.de/Soon™">soon™</a></h2>
-            <p><img src="/assets/alltheitems.png" alt="Craft ALL the items!" title="original image by Allie Brosh of Hyperbole and a Half" /></p>
+            <p><img src="/assets/alltheitems.png" class="nearest-neighbor" alt="Craft ALL the items!" title="original image by Allie Brosh of Hyperbole and a Half" /></p>
         </div>
         <hr />
         <p class="muted text-center">The People of wurstmineberg.de 2012–2016</p>
